--- a/bikes.html
+++ b/bikes.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bike page to rent">
+    <meta name="description" content="Clothes page to buy">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Bikes</title>
+    <title>Clothes</title>
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
                      <a href="index.html">Home</a>
                  </li>
                  <li>
-                     <a href="index.html#bikes-section">Bikes</a>
+                     <a href="index.html#bikes-section">Clothes</a>
                  </li>
                  <li>
                      <a href="contact.html">Contact us</a>
@@ -33,7 +33,7 @@
     </header>
 
     <section>
-        <div class="title-bikes"> Harley-Davidson</div>
+        <div class="title-bikes"> T-shirt</div>
         <div class="bikes-container" id="bikes-1">
             <div class="information-side">
                 <h3 class="head-3">Models</h3>
@@ -56,7 +56,7 @@
     </section>
 
     <section>
-        <div class="title-bikes">Indian</div>
+        <div class="title-bikes">Cap</div>
         <div class="bikes-container" id="bikes-2">
             <div class="information-side">
                 <h3 class="head-3">Models</h3>
