--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- css link -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>Rent A Bike!</title>
+    <title>Aibel Since</title>
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#bikes-section">Bikes</a>
+                    <a href="#bikes-section">Clothes</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact us</a>
@@ -35,31 +35,35 @@
     </header>
     <section class="hero">
         <div class="hero-contents">
-            <h1>Welcome to Rent A Bike! </h1>
-            <span>Harley - Indian</span>
+            <h1></h1>
+            <span></span>
         </div>
     </section>
     <section id="Bikes-section">
-        <h2>Our Bikes</h2>
+        <h2>Our Assortment</h2>
         <div class="container">
             <div class="card">
-                <img src="assets/image/pexels-frans-van-heerden-674048.jpg" alt="">
+                <img src="assets/image/tshirt.png" alt="">
                
                 <div class="card-contents">
-                    <h3>Harley Davidson</h3>
+                    <h3>T-shirt</h3>
                     <p>
-                        Harley-Davidson is an American motorcycle manufacturer founded in 1903 by William Harley and brothers Walter, William and Arthur Davidson in Milwaukee, Wisconsin.
+                        This is our best seller for a reason. Relaxed, tailored and ultra-comfortable, you'll love the way you look in this durable, reliable classic.
+High-quality processing: double seams on the hems
+Straight cut
+Soft fabric quality: 153 g/m² (white: 144 g/m²)
+Material: 100% cotton (grey melange: 90% cotton, 10% polyester)
                     </p>
                     <button class="button" onclick="location.href='bikes.html'">read more</button>
                 </div>
             </div>
 
             <div id="card-img2" class="card">
-                <img src="assets/image/pexels-revac-film's&photography-115145.jpg" alt="">
+                <img src="assets/image/keps.png" alt="">
                 <div class="card-contents">
-                    <h3>Indian</h3>
+                    <h3>Cap</h3>
                     <p>
-                        Indian Motorcycle (or Indian) is an American brand of motorcycles owned and produced by American automotive manufacturer Polaris Inc. 
+                        Retro black trucker, material: 60% Cotton, 40% Polyester. 
                     </p>
                     <button class="button" onclick="location.href='bikes.html'">read more</button>
                 </div>
