--- a/bikes.html
+++ b/bikes.html
@@ -36,20 +36,20 @@
         <div class="title-bikes"> T-shirt</div>
         <div class="bikes-container" id="bikes-1">
             <div class="information-side">
-                <h3 class="head-3">Models</h3>
+                <h3 class="head-3">Sizes</h3>
                 <ol>
-                    <li>Military</li>
-                    <li>Softail</li>
-                    <li>Touring</li>
-                    <li>Dyna</li>
-                    <li>Sportster</li>
+                    <li>S</li>
+                    <li>M</li>
+                    <li>L</li>
+                    <li>XL</li>
+                    <li>XXL</li>
                 </ol>
             </div>
             <div class="prices-side">
                 <h3 class="head-3">Prices</h3>
                 <ol>
-                    <li>$100, Hour</li>
-                    <li>$500, Week</li>
+                    <li>10.99 $</li>
+                    <li>+ shipping</li>
                 </ol>
             </div>
         </div>
@@ -59,20 +59,20 @@
         <div class="title-bikes">Cap</div>
         <div class="bikes-container" id="bikes-2">
             <div class="information-side">
-                <h3 class="head-3">Models</h3>
+                <h3 class="head-3">Sizes</h3>
                 <ol>
-                    <li>Chief</li>
-                    <li>Scout</li>
-                    <li>Vintage</li>
-                    <li>Roadmaste</li>
-                    <li>FTR</li>
+                    <li>One Size - (55 - 60 CM)</li>
+                    <li>Child - (51 - 53 CM)</li>
+                    <li>S/M - (55 - 59 CM)</li>
+                    <li>M/L - (58 - 62 CM)</li>
+                    <li>L/XL - (58 - 61 CM)</li>
                 </ol>
             </div>
             <div class="prices-side">
                 <h3 class="head-3">Prices</h3>
                 <ol>
-                    <li>$100, Hour</li>
-                    <li>$500, Week</li>
+                    <li>19.99 $</li>
+                    <li>+ shipping</li>
                 </ol>
             </div>
         </div>
