--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Rent a bike">
+    <meta name="description" content="Aibel Since">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -24,7 +24,7 @@
                      <a href="index.html">Home</a>
                  </li>
                  <li>
-                     <a href="index.html#bikes-section">Bikes</a>
+                     <a href="index.html#bikes-section">Clothes</a>
                  </li>
                  <li>
                      <a href="contact.html">Contact us</a>
@@ -39,7 +39,7 @@
                 <form action="./confirmation.html" method="get">
                     <h2>contact us</h2>
                     <input class="field" type="text" placeholder="Name" required >
-                    <input class="field" type="email" placeholder="rentabike@example.com" required>
+                    <input class="field" type="email" placeholder="aibelsince@example.com" required>
                     <textarea class="field" cols="30" rows="6" placeholder="write your message here...." required></textarea>
                     <button id="submit" type="submit">submit</button>
                 </form>
