--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Material: 100% cotton (grey melange: 90% cotton, 10% polyester)
                 <div class="card-contents">
                     <h3>Cap</h3>
                     <p>
-                        Retro black trucker, material: 60% Cotton, 40% Polyester. 
+                        Retro black trucker. Classic Yupoog caps are hugely popular. With their focus on fit, material and quality, they have become a very popular player in caps. Yupoong is first and foremost known for its flexfit cap, which is the market-leading model in flexfit caps. In addition to their flexfit caps. material: 60% Cotton, 40% Polyester. 
                     </p>
                     <button class="button" onclick="location.href='bikes.html'">read more</button>
                 </div>
