--- a/confirmation.html
+++ b/confirmation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Rent a bike">
+    <meta name="description" content="Aibel Since">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="assets/css/style.css">
@@ -23,7 +23,7 @@
                      <a href="index.html">Home</a>
                  </li>
                  <li>
-                     <a href="index.html#bikes-section">Bikes</a>
+                     <a href="index.html#clothes-section">Clothes</a>
                  </li>
                  <li>
                      <a href="contact.html">Contact us</a>
