--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rent a bike">
-    <meta name="keywords" content="rent bike">
+    <meta name="description" content="Aibel Since">
+    <meta name="keywords" content="Aibel Since">
 
     <!-- css link -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
@@ -25,7 +25,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#bikes-section">Clothes</a>
+                    <a href="#clothes-section">Clothes</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact us</a>
@@ -39,7 +39,7 @@
             <span></span>
         </div>
     </section>
-    <section id="Bikes-section">
+    <section id="clothes-section">
         <h2>Our Assortment</h2>
         <div class="container">
             <div class="card">
@@ -54,7 +54,7 @@ Straight cut
 Soft fabric quality: 153 g/m² (white: 144 g/m²)
 Material: 100% cotton (grey melange: 90% cotton, 10% polyester)
                     </p>
-                    <button class="button" onclick="location.href='bikes.html'">read more</button>
+                    <button class="button" onclick="location.href='clothes.html'">read more</button>
                 </div>
             </div>
 
@@ -65,7 +65,7 @@ Material: 100% cotton (grey melange: 90% cotton, 10% polyester)
                     <p>
                         Retro black trucker. Classic Yupoog caps are hugely popular. With their focus on fit, material and quality, they have become a very popular player in caps. Yupoong is first and foremost known for its flexfit cap, which is the market-leading model in flexfit caps. In addition to their flexfit caps. material: 60% Cotton, 40% Polyester. 
                     </p>
-                    <button class="button" onclick="location.href='bikes.html'">read more</button>
+                    <button class="button" onclick="location.href='clothes.html'">read more</button>
                 </div>
             </div>
         </div>
