--- a/clothes.html
+++ b/clothes.html
@@ -23,7 +23,7 @@
                      <a href="index.html">Home</a>
                  </li>
                  <li>
-                     <a href="index.html#bikes-section">Clothes</a>
+                     <a href="index.html#clothes-section">Clothes</a>
                  </li>
                  <li>
                      <a href="contact.html">Contact us</a>
@@ -33,8 +33,8 @@
     </header>
 
     <section>
-        <div class="title-bikes"> T-shirt</div>
-        <div class="bikes-container" id="bikes-1">
+        <div class="title-clothes"> T-shirt</div>
+        <div class="clothes-container" id="clothes-1">
             <div class="information-side">
                 <h3 class="head-3">Sizes</h3>
                 <ol>
@@ -56,8 +56,8 @@
     </section>
 
     <section>
-        <div class="title-bikes">Cap</div>
-        <div class="bikes-container" id="bikes-2">
+        <div class="title-clothes">Cap</div>
+        <div class="clothes-container" id="clothes-2">
             <div class="information-side">
                 <h3 class="head-3">Sizes</h3>
                 <ol>
