--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                      <a href="index.html">Home</a>
                  </li>
                  <li>
-                     <a href="index.html#bikes-section">Clothes</a>
+                     <a href="index.html#clothes-section">Clothes</a>
                  </li>
                  <li>
                      <a href="contact.html">Contact us</a>
