change form to email

--- a/contact.html
+++ b/contact.html
@@ -34,23 +34,24 @@
      </header>
 
      <section id="contact-box">
-         <div class="inside-box">
-            <div class="form-side">
-                <form action="./confirmation.html" method="get">
-                    <h2>contact us</h2>
-                    <input class="field" type="text" placeholder="Name" required >
-                    <input class="field" type="email" placeholder="aibelsince@example.com" required>
-                    <textarea class="field" cols="30" rows="6" placeholder="write your message here...." required></textarea>
-                    <button id="submit" type="submit">submit</button>
-                </form>
-            </div>
-            <div class="right-side">
-                <h2>Have any questions or suggestions?</h2>
-                <p>share them in the message box. I will respond to you within 24 hours </p>
-            </div>
-         </div>
-     </section>
-     <footer>
+        <div class="inside-box">
+           <div class="form-side">
+            <form action="mailto:carl.nyberg@hotmail.com" method="get">
+                <h2>contact us</h2>
+                <input class="field" type="text" placeholder="Name" required >
+                <input class="field" type="email" placeholder="aibelsince@example.com" required>
+                <textarea class="field" cols="30" rows="6" placeholder="write your message here...." required></textarea>
+                <button id="submit" type="submit">submit</button>
+            </form>
+
+           </div>
+           <div class="right-side">
+               <h2>Have any questions or suggestions?</h2>
+               <p>share them in the message box. I will respond to you within 24 hours </p>
+           </div>
+        </div>
+    </section>
+    <footer>
         <!-- <div> -->
             <ol class="icons">
                 <li>
