Test email with formsubmit

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
      <section id="contact-box">
         <div class="inside-box">
            <div class="form-side">
-            <form action="./confirmation.html" action="mailto:aibelsince@hotmail.com" method="get" enctype="text/plain">
+            <form action="./confirmation.html" action="https://formsubmit.co/el/royefa" method="get">
                 <h2>contact us</h2>
                 <input class="field" type="text" placeholder="Name" required >
                 <input class="field" type="email" placeholder="aibelsince@example.com" required>
