--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,12 @@
      <section id="contact-box">
         <div class="inside-box">
            <div class="form-side">
-            <form action="./confirmation.html" method="get">
+            <form action="mailto:aibelsince@hotmail.com" method="POST" enctype="text/plain">
                 <h2>contact us</h2>
                 <input class="field" type="text" placeholder="Name" required >
                 <input class="field" type="email" placeholder="aibelsince@example.com" required>
                 <textarea class="field" cols="30" rows="6" placeholder="write your message here...." required></textarea>
-                <a href="mailto:aibelsince@hotmail.com" id="submit" type="submit">submit</a>
+                <button id="submit" type="submit">submit</button>
             </form>
 
            </div>
