--- a/contact.html
+++ b/contact.html
@@ -36,18 +36,15 @@
      <section id="contact-box">
         <div class="inside-box">
            <div class="form-side">
-            <form action="mailto:aibelsince@hotmail.com" method="POST" enctype="text/plain">
-                <h2>contact us</h2>
-                <input class="field" type="text" placeholder="Name" required >
-                <input class="field" type="email" placeholder="aibelsince@example.com" required>
-                <textarea class="field" cols="30" rows="6" placeholder="write your message here...." required></textarea>
-                <button id="submit" type="submit">submit</button>
+            <form>
+                <h2>Contact us</h2>
+                <h3>Aibelsince@hotmail.com</h3>
             </form>
 
            </div>
            <div class="right-side">
                <h2>Have any questions or suggestions?</h2>
-               <p>share them in the message box. I will respond to you within 24 hours </p>
+               <p>Send us an mail and we will respond to you within 24 hours </p>
            </div>
         </div>
     </section>
