--- a/confirmation.html
+++ b/confirmation.html
@@ -47,7 +47,7 @@
     <footer>
         <ol class="icons">
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" 
+                <a href="https://www.facebook.com/profile.php?id=100092028073642" target="_blank" rel="noopener" 
                     aria-label="visit my facebook page">
                     <i class="fab fa-facebook"></i>
                 </a>
