--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Aibel Since">
     <meta name="keywords" content="Aibel Since">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 
     <!-- css link -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
